--- a/Introduction/Python_basic_with_numpy/Python Basics With Numpy v3.ipynb
+++ b/Introduction/Python_basic_with_numpy/Python Basics With Numpy v3.ipynb
@@ -38,24 +38,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "### START CODE HERE ### (≈ 1 line of code)\n",
-    "test = None\n",
+    "test = \"Hello world\"\n",
     "### END CODE HERE ###"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test: Hello world\n"
+     ]
+    }
+   ],
    "source": [
     "print (\"test: \" + test)"
    ]
@@ -103,10 +107,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# GRADED FUNCTION: basic_sigmoid\n",
@@ -125,7 +127,7 @@
     "    \"\"\"\n",
     "    \n",
     "    ### START CODE HERE ### (≈ 1 line of code)\n",
-    "    s = None\n",
+    "    s = 1 / (1 + math.exp(-x))\n",
     "    ### END CODE HERE ###\n",
     "    \n",
     "    return s"
@@ -133,11 +135,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9525741268224334"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "basic_sigmoid(3)"
    ]
@@ -165,11 +176,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "bad operand type for unary -: 'list'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-11-8ccefa5bf989>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m### One reason why we use \"numpy\" instead of \"math\" in Deep Learning ###\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mbasic_sigmoid\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# you will see this give an error when you run it, because x is a vector.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-9-6bbe580769a3>\u001b[0m in \u001b[0;36mbasic_sigmoid\u001b[0;34m(x)\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m     \u001b[0;31m### START CODE HERE ### (≈ 1 line of code)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m     \u001b[0ms\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mmath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexp\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     18\u001b[0m     \u001b[0;31m### END CODE HERE ###\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: bad operand type for unary -: 'list'"
+     ]
+    }
+   ],
    "source": [
     "### One reason why we use \"numpy\" instead of \"math\" in Deep Learning ###\n",
     "x = [1, 2, 3]\n",
@@ -185,11 +207,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 2.71828183  7.3890561  20.08553692]\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -207,11 +235,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4 5 6]\n"
+     ]
+    }
+   ],
    "source": [
     "# example of vector operation\n",
     "x = np.array([1, 2, 3])\n",
@@ -244,10 +278,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# GRADED FUNCTION: sigmoid\n",
@@ -266,7 +298,7 @@
     "    \"\"\"\n",
     "    \n",
     "    ### START CODE HERE ### (≈ 1 line of code)\n",
-    "    s = None\n",
+    "    s = 1 / (1 + np.exp(-x))\n",
     "    ### END CODE HERE ###\n",
     "    \n",
     "    return s"
@@ -274,11 +306,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.73105858, 0.88079708, 0.95257413])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "x = np.array([1, 2, 3])\n",
     "sigmoid(x)"
@@ -313,10 +354,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 17,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# GRADED FUNCTION: sigmoid_derivative\n",
@@ -334,8 +373,8 @@
     "    \"\"\"\n",
     "    \n",
     "    ### START CODE HERE ### (≈ 2 lines of code)\n",
-    "    s = None\n",
-    "    ds = None\n",
+    "    s =  1 / (1 + np.exp(-x))\n",
+    "    ds = s * (1 - s)\n",
     "    ### END CODE HERE ###\n",
     "    \n",
     "    return ds"
@@ -343,11 +382,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sigmoid_derivative(x) = [0.19661193 0.10499359 0.04517666]\n"
+     ]
+    }
+   ],
    "source": [
     "x = np.array([1, 2, 3])\n",
     "print (\"sigmoid_derivative(x) = \" + str(sigmoid_derivative(x)))"
@@ -392,10 +437,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 38,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# GRADED FUNCTION: image2vector\n",
@@ -409,7 +452,10 @@
     "    \"\"\"\n",
     "    \n",
     "    ### START CODE HERE ### (≈ 1 line of code)\n",
-    "    v = None\n",
+    "    print(\"image.shape[0] = {}\".format(image.shape[0]))\n",
+    "    print(\"image.shape[1] = {}\".format(image.shape[1]))\n",
+    "    print(\"image.shape[2] = {}\".format(image.shape[2]))\n",
+    "    v = image.reshape(image.shape[0] * image.shape[1] * image.shape[2], 1)\n",
     "    ### END CODE HERE ###\n",
     "    \n",
     "    return v"
@@ -417,11 +463,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "image.shape[0] = 3\n",
+      "image.shape[1] = 3\n",
+      "image.shape[2] = 2\n",
+      "image2vector(image) = [[0.67826139]\n",
+      " [0.29380381]\n",
+      " [0.90714982]\n",
+      " [0.52835647]\n",
+      " [0.4215251 ]\n",
+      " [0.45017551]\n",
+      " [0.92814219]\n",
+      " [0.96677647]\n",
+      " [0.85304703]\n",
+      " [0.52351845]\n",
+      " [0.19981397]\n",
+      " [0.27417313]\n",
+      " [0.60659855]\n",
+      " [0.00533165]\n",
+      " [0.10820313]\n",
+      " [0.49978937]\n",
+      " [0.34144279]\n",
+      " [0.94630077]]\n"
+     ]
+    }
+   ],
    "source": [
     "# This is a 3 by 3 by 2 array, typically images will be (num_px_x, num_px_y,3) where 3 represents the RGB values\n",
     "image = np.array([[[ 0.67826139,  0.29380381],\n",
@@ -499,10 +571,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 46,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# GRADED FUNCTION: normalizeRows\n",
@@ -520,10 +590,10 @@
     "    \n",
     "    ### START CODE HERE ### (≈ 2 lines of code)\n",
     "    # Compute x_norm as the norm 2 of x. Use np.linalg.norm(..., ord = 2, axis = ..., keepdims = True)\n",
-    "    x_norm = None\n",
+    "    x_norm = np.linalg.norm(x, ord = 2, axis = 1, keepdims = True)\n",
     "    \n",
     "    # Divide x by its norm.\n",
-    "    x = None\n",
+    "    x = x / x_norm\n",
     "    ### END CODE HERE ###\n",
     "\n",
     "    return x"
@@ -531,16 +601,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "normalizeRows(x) = \n",
+      "[[0.         0.6        0.8       ]\n",
+      " [0.13736056 0.82416338 0.54944226]]\n"
+     ]
+    }
+   ],
    "source": [
     "x = np.array([\n",
     "    [0, 3, 4],\n",
     "    [1, 6, 4]])\n",
-    "print(\"normalizeRows(x) = \" + str(normalizeRows(x)))"
+    "print(\"normalizeRows(x) = \\n\" + str(normalizeRows(x)))"
    ]
   },
   {
@@ -616,10 +694,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 77,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# GRADED FUNCTION: softmax\n",
@@ -638,13 +714,13 @@
     "    \n",
     "    ### START CODE HERE ### (≈ 3 lines of code)\n",
     "    # Apply exp() element-wise to x. Use np.exp(...).\n",
-    "    x_exp = None\n",
-    "\n",
+    "    x_exp = np.exp(x)\n",
+    "    print(x_exp)\n",
     "    # Create a vector x_sum that sums each row of x_exp. Use np.sum(..., axis = 1, keepdims = True).\n",
-    "    x_sum = None\n",
-    "    \n",
+    "    x_sum = np.sum(x_exp, axis = 1, keepdims = True)\n",
+    "    print(x_sum)\n",
     "    # Compute softmax(x) by dividing x_exp by x_sum. It should automatically use numpy broadcasting.\n",
-    "    s = None\n",
+    "    s = x_exp / x_sum\n",
     "\n",
     "    ### END CODE HERE ###\n",
     "    \n",
@@ -653,16 +729,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[8.10308393e+03 7.38905610e+00 1.48413159e+02 1.00000000e+00\n",
+      "  1.00000000e+00]\n",
+      " [1.09663316e+03 1.48413159e+02 1.00000000e+00 1.00000000e+00\n",
+      "  1.00000000e+00]]\n",
+      "[[8260.88614278]\n",
+      " [1248.04631753]]\n",
+      "softmax(x) = \n",
+      "[[9.80897665e-01 8.94462891e-04 1.79657674e-02 1.21052389e-04\n",
+      "  1.21052389e-04]\n",
+      " [8.78679856e-01 1.18916387e-01 8.01252314e-04 8.01252314e-04\n",
+      "  8.01252314e-04]]\n"
+     ]
+    }
+   ],
    "source": [
     "x = np.array([\n",
     "    [9, 2, 5, 0, 0],\n",
     "    [7, 5, 0, 0 ,0]])\n",
-    "print(\"softmax(x) = \" + str(softmax(x)))"
+    "print(\"softmax(x) = \\n\" + str(softmax(x)))"
    ]
   },
   {
@@ -726,11 +818,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dot = 278\n",
+      " ----- Computation time = 0.12527999999978334ms\n",
+      "outer = [[81. 18. 18. 81.  0. 81. 18. 45.  0.  0. 81. 18. 45.  0.  0.]\n",
+      " [18.  4.  4. 18.  0. 18.  4. 10.  0.  0. 18.  4. 10.  0.  0.]\n",
+      " [45. 10. 10. 45.  0. 45. 10. 25.  0.  0. 45. 10. 25.  0.  0.]\n",
+      " [ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]\n",
+      " [ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]\n",
+      " [63. 14. 14. 63.  0. 63. 14. 35.  0.  0. 63. 14. 35.  0.  0.]\n",
+      " [45. 10. 10. 45.  0. 45. 10. 25.  0.  0. 45. 10. 25.  0.  0.]\n",
+      " [ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]\n",
+      " [ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]\n",
+      " [ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]\n",
+      " [81. 18. 18. 81.  0. 81. 18. 45.  0.  0. 81. 18. 45.  0.  0.]\n",
+      " [18.  4.  4. 18.  0. 18.  4. 10.  0.  0. 18.  4. 10.  0.  0.]\n",
+      " [45. 10. 10. 45.  0. 45. 10. 25.  0.  0. 45. 10. 25.  0.  0.]\n",
+      " [ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]\n",
+      " [ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]]\n",
+      " ----- Computation time = 0.370458000000351ms\n",
+      "elementwise multiplication = [81.  4. 10.  0.  0. 63. 10.  0.  0.  0. 81.  4. 25.  0.  0.]\n",
+      " ----- Computation time = 0.15736300000002146ms\n",
+      "gdot = [12.47981331 19.78231963 26.52858432]\n",
+      " ----- Computation time = 0.20547899999989738ms\n"
+     ]
+    }
+   ],
    "source": [
     "import time\n",
     "\n",
@@ -775,11 +894,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dot = 278\n",
+      " ----- Computation time = 0.157173000000288ms\n",
+      "outer = [[81 18 18 81  0 81 18 45  0  0 81 18 45  0  0]\n",
+      " [18  4  4 18  0 18  4 10  0  0 18  4 10  0  0]\n",
+      " [45 10 10 45  0 45 10 25  0  0 45 10 25  0  0]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0  0  0  0  0  0]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0  0  0  0  0  0]\n",
+      " [63 14 14 63  0 63 14 35  0  0 63 14 35  0  0]\n",
+      " [45 10 10 45  0 45 10 25  0  0 45 10 25  0  0]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0  0  0  0  0  0]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0  0  0  0  0  0]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0  0  0  0  0  0]\n",
+      " [81 18 18 81  0 81 18 45  0  0 81 18 45  0  0]\n",
+      " [18  4  4 18  0 18  4 10  0  0 18  4 10  0  0]\n",
+      " [45 10 10 45  0 45 10 25  0  0 45 10 25  0  0]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0  0  0  0  0  0]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0  0  0  0  0  0]]\n",
+      " ----- Computation time = 0.15582400000013763ms\n",
+      "elementwise multiplication = [81  4 10  0  0 63 10  0  0  0 81  4 25  0  0]\n",
+      " ----- Computation time = 0.11424100000034798ms\n",
+      "gdot = [12.47981331 19.78231963 26.52858432]\n",
+      " ----- Computation time = 0.13019500000011064ms\n"
+     ]
+    }
+   ],
    "source": [
     "x1 = [9, 2, 5, 0, 0, 7, 5, 0, 0, 0, 9, 2, 5, 0, 0]\n",
     "x2 = [9, 2, 2, 9, 0, 9, 2, 5, 0, 0, 9, 2, 5, 0, 0]\n",
@@ -834,10 +980,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 83,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# GRADED FUNCTION: L1\n",
@@ -853,7 +997,7 @@
     "    \"\"\"\n",
     "    \n",
     "    ### START CODE HERE ### (≈ 1 line of code)\n",
-    "    loss = None\n",
+    "    loss = np.sum(abs(yhat - y))\n",
     "    ### END CODE HERE ###\n",
     "    \n",
     "    return loss"
@@ -861,11 +1005,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "L1 = 1.1\n"
+     ]
+    }
+   ],
    "source": [
     "yhat = np.array([.9, 0.2, 0.1, .4, .9])\n",
     "y = np.array([1, 0, 0, 1, 1])\n",
@@ -898,10 +1048,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 85,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# GRADED FUNCTION: L2\n",
@@ -917,7 +1065,7 @@
     "    \"\"\"\n",
     "    \n",
     "    ### START CODE HERE ### (≈ 1 line of code)\n",
-    "    loss = None\n",
+    "    loss = np.dot(yhat - y, yhat - y)\n",
     "    ### END CODE HERE ###\n",
     "    \n",
     "    return loss"
@@ -925,11 +1073,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "L2 = 0.43\n"
+     ]
+    }
+   ],
    "source": [
     "yhat = np.array([.9, 0.2, 0.1, .4, .9])\n",
     "y = np.array([1, 0, 0, 1, 1])\n",
@@ -989,7 +1143,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
